--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         
         <!-- font icons -->
         <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
         
         <!-- Bootstrap + Steller main styles -->
         <link rel="stylesheet" href="assets/css/style.css">
@@ -75,8 +76,10 @@
 
             <div class="socials mt-4">
                 <a class="social-item" href="https://instagram.com/sosialpionir" target="_blank"><i class="ti-instagram"></i></a>
-                <a class="social-item" href="https://x.com/sosialpionir?s=21"><i class="ti-twitter"></i></a>
-            </div>
+                <a class="social-item" href="https://x.com/sosialpionir?s=21" target="_blank"><i class="ti-twitter"></i></a>
+                <a class="social-item" href="mailto:sosialpionir@gmail.com"><i class="ti-email"></i></a>
+                <a class="social-item" href="https://www.tiktok.com/@sosialpionir" target="_blank"><i class="fa-brands fa-tiktok"></i></a>
+            </div>            
         </div>              
         <div class="img-holder">
             <img src="assets/imgs/besar.png" alt="Sosial Pionir Logo">
@@ -476,10 +479,11 @@
             <div class="col-sm-6">
                 <div class="socials">
                     <a class="social-item" href="https://instagram.com/sosialpionir" target="_blank"><i class="ti-instagram"></i></a>
-                    <a class="social-item" href="https://x.com/sosialpionir?s=21"><i class="ti-twitter"></i></a>
+                    <a class="social-item" href="https://x.com/sosialpionir?s=21" target="_blank"><i class="ti-twitter"></i></a>
                     <a class="social-item" href="mailto:sosialpionir@gmail.com"><i class="ti-email"></i></a>
+                    <a class="social-item" href="https://www.tiktok.com/@sosialpionir" target="_blank"><i class="fab fa-tiktok"></i></a>
                 </div>
-            </div>
+            </div>            
         </div>
     </div>
 </footer> 
