--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <a href="#contact" class="btn btn-primary rounded">HIRE US</a>
 
                 <!-- Tombol Download Portfolio -->
-                <a href="https://drive.google.com/drive/folders/1bFZdY0LiSkK-hh_Si4pXdYa2RlVhIE-Y?usp=sharing" class="btn btn-dark rounded" target="_blank">DOWNLOAD PORTFOLIO</a>
+                <a href="https://drive.google.com/drive/folders/1_23BNTnlicbsc0_zBVK-esv4gdTWsEnz" class="btn btn-dark rounded" target="_blank">DOWNLOAD PORTFOLIO</a>
             </div>      
 
             <div class="socials mt-4">
@@ -102,7 +102,7 @@
                 <p class="subtitle">Creative Digital Content Service</p>
                 <p>Sosial Pionir hadir di tengah pesatnya perkembangan teknologi digital untuk membantu bisnis memanfaatkan media sosial sebagai platform pemasaran yang efektif. Dengan lebih dari 77% pengguna internet di Indonesia, bisnis kini memiliki peluang besar untuk memperkuat branding mereka melalui konten visual seperti desain grafis dan infografis.</p>
                 <p>Kami berfokus pada pembuatan konten kreatif yang dapat meningkatkan keterlibatan audiens dan membantu klien dari berbagai skala—mulai dari UMKM hingga perusahaan besar dan influencer—untuk membangun identitas merek yang kuat di media sosial. Kami menggunakan tren terkini dan teknologi terbaru untuk memberikan solusi pemasaran yang efektif dan inovatif.</p>
-                <a href="https://drive.google.com/drive/folders/1bFZdY0LiSkK-hh_Si4pXdYa2RlVhIE-Y" target="_blank" class="btn btn-primary rounded mt-3">DOWNLOAD PORTFOLIO</a>                 
+                <a href="https://drive.google.com/drive/folders/1_23BNTnlicbsc0_zBVK-esv4gdTWsEnz" target="_blank" class="btn btn-primary rounded mt-3">DOWNLOAD PORTFOLIO</a>                 
             </div>
         </div>
     </div>
